Bug 334140 - knotes don't preserve the title and other modifications if you lock the note
Summary: knotes don't preserve the title and other modifications if you lock the note
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.13
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-30 15:11 UTC by pier andre
Modified: 2014-04-30 18:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pier andre 2014-04-30 15:11:01 UTC
knotes don't preserve the title and other modifications if you lock the note, on a note, doubleclick on the title, add something before to the already proposed title that is a date, click ok, the title is there, rightclick on the title, choose LOCK, the title you added disappear
the same happens if you modify styles..

Reproducible: Always

Steps to Reproduce:
1.doubleclick on the title
2.add something before to the already proposed title that is a date
3.click ok
4.the title is there
5.rightclick on the title, choose LOCK, the title you added disappear
Actual Results:  
the title you added disappear

Expected Results:  
the title you added should remain there

look please this forum discussion...
https://forums.opensuse.org/showthread.php/497562-after-upgrade-opensuse-12-3-to-kde4-13-0-knotes-don-t-works-properly
Comment 1 Laurent Montel 2014-04-30 15:44:20 UTC
I confirm it.
I will fix it soon.
Comment 2 Laurent Montel 2014-04-30 18:01:06 UTC
Git commit cd78c5cf7f1d1106a9a2b75a7c28a3eee4ed7670 by Montel Laurent.
Committed on 30/04/2014 at 18:00.
Pushed by mlaurent into branch 'KDE/4.13'.

Fix Bug 334140 - knotes don't preserve the title and other modifications if you lock the note

FIXED-IN: 4.13.1

M  +12   -2    knotes/notes/knote.cpp
M  +1    -0    knotes/notes/knote.h

http://commits.kde.org/kdepim/cd78c5cf7f1d1106a9a2b75a7c28a3eee4ed7670