Fix Bug 334140 - knotes don't preserve the title and other modifications if you lock the note

FIXED-IN: 4.13.1
BUG: 334140